[package]
name = "iron-machine"
version = "0.1.0"
authors = ["Itszuvalex <Itszuvalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = { version = "0.34.2", features = ["bundled", "static-link"] }
