[package]
name = "iron-machine"
version = "0.1.0"
authors = ["Itszuvalex <Itszuvalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
gl = { path = "lib/gl" }
sdl2 = { version = "0.34.2", features = ["bundled", "static-link"] }
render_gl = { path = "lib/render_gl" }
resources = { path = "lib/resources" }
log = "0.4.14"

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]
