[package]
name = "render_gl"
version = "0.1.0"
authors = ["Itszuvalex <Itszuvalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
gl = { path = "../gl" }
render_gl_derive = { path = "../render_gl_derive" }
resources = { path = "../resources" }
